# causal_unlearning

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/default/: config.json  summary.json
artifacts/default/metrics/: baseline.json  oracle.json  unlearn_lambda_0.json  unlearn_lambda_0p1.json  unlearn_lambda_0p5.json  unlearn_lambda_1.json
experiments/: aggregate_celeba.py  aggregate_waterbirds.py  run_analysis.py  run_analysis_multiseed.py  run_baselines_multiseed.py  run_celeba.py  run_celeba_baselines.py  run_dfr_waterbirds.py  run_extended.py  run_stat_tests.py  run_waterbirds.py  run_waterbirds_v2.py
paper/: generate_figures.py  generate_figures_v2.py  paper.tex  references.bib
src/causal_unlearning/: __init__.py  __main__.py  baselines.py  cli.py  config.py  datasets.py  experiments.py  metrics.py  models.py  plotting.py  training.py  utils.py
src/causal_unlearning.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_config.py
